kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
      annotations:
        argocd-image-updater.argoproj.io/image-list-api-server: 693041643423.dkr.ecr.us-east-1.amazonaws/eks-curso
        argocd-image-updater.argoproj.io/api-server.update-strategy: latest
        argocd-image-updater.argoproj.io/write-back-method: git
        argocd-image-updater.argoproj.io/git-branch: main
    spec:
      containers:
        - name: api-server
          image: 693041643423.dkr.ecr.us-east-1.amazonaws.com/eks-curso:latest
          command: ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "80"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: default
spec:
  selector:
    app: api-server
  ports:
    - port: 80
      targetPort: 80
