kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-server
  template:
    metadata:
      labels:
        app: frontend-server
    spec:
      containers:
        - name: frontend-server
          image: 693041643423.dkr.ecr.us-east-1.amazonaws.com/eks-curso:9507150f42f54d75746aeabf71a7b0a2c56968e9
          command: ["streamlit", "run", "dashboard.py", "--server.port", "80"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-server
  namespace: default
spec:
  selector:
    app: frontend-server
  ports:
    - port: 80
      targetPort: 80
